Working on app icon. Final Touches

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,9 @@
     <string name="app_name">Billsyfy</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_title">Billsfy</string>
+    <string name="nav_header_subtitle">Sort your printed bills</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
 
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
@@ -13,4 +12,9 @@
     <string name="menu_tools">Tools</string>
     <string name="menu_share">Share</string>
     <string name="menu_send">Send</string>
+
+    <string name="menu_brief">Bills Brief</string>
+    <string name="menu_capture">Capture Bill</string>
+    <string name="menu_bill_form">Bills Details</string>
+    <string name="menu_bill_gallery">Bills Gallery</string>
 </resources>
